condformat 0.7.0.9000
----------------------------------------------------------------

* Feature: rule_text_bold support both in HTML and PDF output
* Feature: rule_text_color (both HTML and PDF outputs)
* Feature: condformat2latex can skip escaping LaTeX code

* Replace dependency: Use grDevices instead of gplots
* Depend on knitr 1.17.9: slidy and other rmarkdown formats are properly detected (#13)

* Documentation: Update API dispatch function to show the new API by default in
  the code completion and in the documentation
* Documentation: Now with markdown in roxygen comments!

* Minor: Generated style CSS rules do not have an initial ";" anymore
* Minor: More modular code. CSS tags to LaTeX conversion is based on S3 methods
  so new rules don't need to touch the code for LaTeX export.

condformat 0.7.0
----------------------------------------------------------------

* Add a new condformat API, that is based on tidy evaluation principles and
  leverages on rlang and tidyselect. The old API is still fully functional but
  deprecated.
* Add a rule_css to let the user specify arbitrary CSS fields. For this rule
  there is no support for PDF or Excel output.
* Improve condformat2excel to export to a specific Excel sheet (#11)
* Fix condformat2latex and add regression test (#9)
* Fix rescale and rescale_mid calls (recent scales use a S3 generic, so we need
  to import it)

condformat 0.6.0
----------------------------------------------------------------

* Fix tibble formatting issues, causing package malfunction.
* Bugfix: theme_htmlTable() now accepts the css.cell argument (thanks
  to 鱼飞灰 for reporting it)
* Require latest htmlTable. Improve/fix printing of condformat



condformat 0.5.0
----------------------------------------------------------------

* Shiny support: Add condformatOutput and renderCondformat. Closes #3.
  - Use pagination in shiny if recent enough htmlTable package is installed.
* PDF support: Fix extra NULL when printing. Closes #4.