@@ -29,7 +29,9 @@ export(show_columns_)
 export(show_rows)
 export(show_rows_)
 export(theme_htmlTable)
+export(theme_htmlWidget)
 export(uq)
+importFrom(htmlTable,htmlTable)
 importFrom(knitr,knit_print)
 importFrom(lazyeval,uq)
 importFrom(magrittr,"%>%")
